add all content

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,383 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Foundation for Sites</title>
-	<link rel="stylesheet" href="css/app.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div class="page">
+		<header>
+			<div class="row">
+				<div class="top-bar">
+					<div class="top-bar-left">
+						<ul class="menu">
+							<li class="site-title text-uppercase">Iddo</li>
+							<li><a href="#">Home</a></li>
+							<li><a href="#">Services</a></li>
+							<li><a href="#">Portfolio</a></li>
+							<li><a href="#">About</a></li>
+							<li><a href="#">Contact</a></li>
+						</ul>
+					</div>
+					<div class="top-bar-right">
+						<div class="top-bar-right">
+							<ul class="menu">
+								<li><a href="#" class="button">Sing up</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</header>
 
+		<div class="video-block">
+			<div class="row">
+				<div class="flex-video">
+					<!--<iframe width="420" height="315" src="https://www.youtube.com/embed/V9gkYw35Vws" frameborder="0" allowfullscreen></iframe>-->
+				</div>
+			</div>
+		</div>
 
+		<div class="services">
+			<div class="about-services">
+				<div class="row">
+					<div class="large-4 columns">
+						<h2 class="text-uppercase section-title">Our Services.</h2>
+					</div>
+					<div class="large-8 columns">
+						<ul class="services-list clearfix row">
+							<li class="services-list-item float-left large-6 columns">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+							</li>
+							<li class="services-list-item float-left large-6 columns">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+							</li>
+							<li class="services-list-item float-left large-6 columns">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+							</li>
+							<li class="services-list-item float-left large-6 columns">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="all-services">
+				<ul class="row service-list">
+					<li class="large-2 columns">
+						<a href="/"></a>
+					</li>
+					<li class="large-2 columns"><a href="/"></a></li>
+					<li class="large-2 columns"><a href="/"></a></li>
+					<li class="large-2 columns"><a href="/"></a></li>
+					<li class="large-2 columns"><a href="/"></a></li>
+					<li class="large-2 columns"><a href="/"></a></li>
+				</ul>
+			</div>
+
+		</div>
+		<div class="our-works">
+			<div class="row">
+				<div class="large-4 columns">
+					<h2 class="text-uppercase section-title">Our works.</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-4 columns">
+					<div class="button-group">
+						<button class="button">All</button>
+						<button class="button">Website</button>
+						<button class="button">Branding</button>
+					</div>
+				</div>
+			</div>
+			<ul class="row work-list">
+				<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>
+				<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>
+				<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>
+				<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>
+				<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>
+				<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>
+				<!--<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>-->
+				<!--<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>-->
+				<!--<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>-->
+				<!--<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>-->
+				<!--<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>-->
+				<!--<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>-->
+			</ul>
+			<div class="row">
+				<div class="columns">
+					<div class="callout">
+						<button class="close-button" aria-label="Close alert" type="button">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+
+				</div>
+			</div>
+		</div>
+		<div class="reviews">
+			<div class="row">
+				<div class="small-12 large-12 columns">
+					<div class="orbit" role="region" aria-label="Reviews of happy clients" data-orbit>
+						<ul class="orbit-container">
+							<button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+							<button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+							<li class="is-active orbit-slide">
+								<div class="user-review">
+									<p class="text-review">Sed ut perspiciatis unde omnis iste natus error sit voluptatem, ed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
+									<img src="" alt="client" class="user-photo">
+									<h5 class="text-uppercase user-name">Jack Efron</h5>
+								</div>
+							</li>
+							<li class="orbit-slide">
+								<div class="user-review">
+									<p class="text-review">Sed ut perspiciatis unde omnis iste natus error sit voluptatem, ed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
+									<img src="" alt="client" class="user-photo">
+									<h5 class="text-uppercase user-name">Jack Efron</h5>
+								</div>
+							</li>
+							<li class="orbit-slide">
+								<div class="user-review">
+									<p class="text-review">Sed ut perspiciatis unde omnis iste natus error sit voluptatem, ed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
+									<img src="" alt="client" class="user-photo">
+									<h5 class="text-uppercase user-name">Jack Efron</h5>
+								</div>
+							</li>
+						</ul>
+						<nav class="orbit-bullets">
+							<button class="is-active" data-slide="0"><span class="show-for-sr">First slide details.</span><span class="show-for-sr">Current Slide</span></button>
+							<button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+							<button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+						</nav>
+					</div><!-- end orbit-->
+				</div>
+			</div>
+		</div><!--end reviews-->
+
+		<div class="our-team">
+			<div class="about-team">
+				<div class="row">
+					<div class="large-4 columns">
+						<h2 class="text-uppercase section-title">Our team.</h2>
+					</div>
+				</div>
+				<div class="row">
+					<ul class="team-member-list">
+						<li class="team-member-item large-4 columns">
+							<img src="" alt="team-member">
+							<h3 class="text-uppercase">Michael Joe</h3>
+							<h3 class="subheader">CEO & Founder</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+						</li>
+						<li class="team-member-item large-4 columns">
+							<img src="" alt="team-member">
+							<h3 class="text-uppercase">Jeremy Scott</h3>
+							<h3 class="subheader">Designer</h3>
+							<p>Voluptatem accusantium doloremque laudantium, totam rem aperiam.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+						</li>
+						<li class="team-member-item large-4 columns">
+							<img src="" alt="team-member">
+							<h3 class="text-uppercase">Justin West</h3>
+							<h3 class="subheader">Manager</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+						</li>
+						<!--<li class="team-member-item large-4 columns">-->
+							<!--<img src="" alt="team-member">-->
+							<!--<h3 class="text-uppercase">Michael Joe</h3>-->
+							<!--<h3 class="subheader">CEO & Founder</h3>-->
+							<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>-->
+						<!--</li>-->
+						<!--<li class="team-member-item large-4 columns">-->
+							<!--<img src="" alt="team-member">-->
+							<!--<h3 class="text-uppercase">Jeremy Scott</h3>-->
+							<!--<h3 class="subheader">Designer</h3>-->
+							<!--<p>Voluptatem accusantium doloremque laudantium, totam rem aperiam.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>-->
+						<!--</li>-->
+						<!--<li class="team-member-item large-4 columns">-->
+							<!--<img src="" alt="team-member">-->
+							<!--<h3 class="text-uppercase">Justin West</h3>-->
+							<!--<h3 class="subheader">Manager</h3>-->
+							<!--<p>Voluptatem accusantium doloremque laudantium, totam rem aperiam.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>-->
+						<!--</li>-->
+					</ul>
+				</div>
+				<div class="row">
+					<div class="columns">
+						<div class="callout">
+							<button class="close-button" aria-label="Close alert" type="button">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+
+					</div>
+				</div>
+			</div>
+			<div class="team-achievements">
+				<ul class="row achievements-list">
+					<li class="large-3 columns">
+						<div class="icon"></div>
+						<div class="stat">2009</div>
+						<h3 class="text-uppercase achievement-description">Perspiciatis</h3>
+					</li>
+					<li class="large-3 columns">
+						<div class="icon"></div>
+						<div class="stat">13,562</div>
+						<h3 class="text-uppercase achievement-description">Comments</h3>
+					</li>
+					<li class="large-3 columns">
+						<div class="icon"></div>
+						<div class="stat">8,710</div>
+						<h3 class="text-uppercase achievement-description">Coffee cups</h3>
+					</li>
+					<li class="large-3 columns">
+						<div class="icon"></div>
+						<div class="stat">715</div>
+						<h3 class="text-uppercase achievement-description">Awards</h3>
+					</li>
+				</ul>
+
+			</div>
+		</div>
+		<div class="our-skills">
+			<div class="row">
+				<div class="large-4 columns">
+					<h2 class="text-uppercase section-title">Our skills.</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-8 columns">
+					<div class="row">
+						<div class="large-3 columns">1</div>
+						<div class="large-3 columns">2</div>
+						<div class="large-3 columns">3</div>
+						<div class="large-3 columns">4</div>
+					</div>
+					<div class="row">
+						<div class="columns large-11 large-offset-1">
+							<h3 class="text-uppercase article-title">Something about our skills</h3>
+							<p class="article-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+								Cupiditate delectus nemo quia veniam. A assumenda dignissimos, enim expedita explicabo
+								ipsum laudantium minima, nihil nulla quasi quod quos repellat vel vero! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+								Cupiditate delectus nemo quia veniam. A assumenda dignissimos, enim expedita explicabo
+								ipsum laudantium minima, nihil nulla quasi quod quos repellat vel vero</p>
+						</div>
+					</div>
+				</div>
+				<div class="large-4 columns">
+					<ul class="accordion" data-accordion>
+						<li class="accordion-item is-active" data-accordion-item>
+							<a href="#" class="accordion-title">Totam rem aperiam eaque</a>
+							<div class="accordion-content" data-tab-content>
+								I would start in the open state, due to using the `is-active` state class.
+							</div>
+						</li>
+						<li class="accordion-item">
+							<a href="#" class="accordion-title" data-accordion-item>Nemo enim ipsam voluptatem</a>
+							<div class="accordion-content" data-tab-content>
+								<p class="skills-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+									At, atque blanditiis consequatur dicta doloremque dolores hic, illum in molestiae
+									nihil nisi placeat quas quia similique tempora temporibus tenetur unde velit.</p>
+							</div>
+						</li>
+						<li class="accordion-item">
+							<a href="#" class="accordion-title" data-accordion-item>Ut enim ad minima veniam</a>
+							<div class="accordion-content" data-tab-content>
+								<p class="skills-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+									At, atque blanditiis consequatur dicta doloremque dolores hic, illum in molestiae
+									nihil nisi placeat quas quia similique tempora temporibus tenetur unde velit.</p>
+							</div>
+						</li>
+						<li class="accordion-item">
+							<a href="#" class="accordion-title" data-accordion-item>Quis nostrum exercitationem ullam</a>
+							<div class="accordion-content" data-tab-content>
+								<p class="skills-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+									At, atque blanditiis consequatur dicta doloremque dolores hic, illum in molestiae
+									nihil nisi placeat quas quia similique tempora temporibus tenetur unde velit.</p>
+							</div>
+						</li>
+						<li class="accordion-item">
+							<a href="#" class="accordion-title" data-accordion-item>Neque porro quisquam est qui</a>
+							<div class="accordion-content" data-tab-content>
+								<p class="skills-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+									At, atque blanditiis consequatur dicta doloremque dolores hic, illum in molestiae
+									nihil nisi placeat quas quia similique tempora temporibus tenetur unde velit.</p>
+							</div>
+						</li>
+					</ul>
+					
+				</div>
+			</div>
+			<!--div.about-our-skills-->
+		</div>
+		<div class="subscribe">
+			<div class="row">
+				<div class="large-4 columns large-offset-3">
+					<p class="lead subscribe-description">Enter your e-mail here...</p>
+				</div>
+				<div class="large-2 columns end">
+					<button class="button float-right">Subscribe</button>
+				</div>
+			</div>
+
+		</div>
+		<div class="partners">
+			<ul class="row partners-list">
+				<li class="partners-list-item large-2 large-offset-1 columns"><a href="#"><img src="images/partners/evato.png" alt="Evato" class="partner-logo"></a></li>
+				<li class="partners-list-item large-2 columns"><a href="#"><img src="images/partners/wordpress.png" alt="Wordpress" class="partner-logo"></a></li>
+				<li class="partners-list-item large-2 columns"><a href="#"><img src="images/partners/dribble.png" alt="Dribble" class="partner-logo"></a></li>
+				<li class="partners-list-item large-2 columns"><a href="#"><img src="images/partners/evato.png" alt="Evato" class="partner-logo"></a></li>
+				<li class="partners-list-item large-2 columns end"><a href="#"><img src="images/partners/wordpress.png" alt="Wordpress" class="partner-logo"></a></li>
+			</ul>
+		</div>
+		<div class="contact-us">
+			<div class="row">
+				<div class="large-4 columns">
+					<h2 class="text-uppercase section-title">Contact us.</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="large-4 columns">
+					<p class="address">123A Building, Road Street, Orlando District, US</p>
+					<p> +01 234 567 89  +01 234 567 89  contact@book.com</p>
+					<ul class="social-link bullet">
+						<li class="social-link-item"><a href="/"></a></li>
+						<li class="social-link-item"><a href="/"></a></li>
+						<li class="social-link-item"><a href="/"></a></li>
+						<li class="social-link-item"><a href="/"></a></li>
+						<li class="social-link-item"><a href="/"></a></li>
+						<li class="social-link-item"><a href="/"></a></li>
+						<li class="social-link-item"><a href="/"></a></li>
+						<li class="social-link-item"><a href="/"></a></li>
+					</ul>
+				</div>
+			</div>
+			<form action="#" method="post">
+				<div class="row">
+					<div class="medium-4 columns"><input type="email" placeholder="email"></div>
+					<div class="medium-4 columns end"><input type="text" placeholder="name"></div>
+				</div>
+				<div class="row">
+					<div class="medium-8 columns">
+						<textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+					</div>
+					<div class="medium-4 columns">
+						<button class="button expanded" type="submit">Submit</button>
+					</div>
+				</div>
+			</form>
+		</div>
+		<footer>
+			<div class="row">
+				<div class="medium-4 medium-offset-4 columns">
+					<h1 class="text-uppercase text-center logo-text">Iddo</h1>
+					<p class="copy-rights text-center">© 2014 IDDO. All rights resevered.</p>
+					<p class="author text-center">Designed by <span class="text-uppercase">DZOAN</span></p>
+					<a href="/" class="button up float-center">up</a>
+
+				</div>
+			</div>
+		</footer>
+	</div>
 
 	<script src="js/app.js"></script>
 </body>
