--- a/src/index.html
+++ b/src/index.html
@@ -192,13 +192,27 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
 						</li>
 						<li class="team-member-item large-4 columns">
-							<img src="" alt="team-member">
+							<div class="social-info">
+								<img src="" alt="team-member">
+								<ul class="team-member-social-link clearfix">
+									<li class="float-left"><a class="fa fa-twitter" href="/"></a></li>
+									<li class="float-left"><a class="fa fa-facebook" href="/"></a></li>
+									<li class="float-left"><a class="fa fa-instagram" href="/"></a></li>
+								</ul>
+							</div>
 							<h3 class="text-uppercase">Jeremy Scott</h3>
 							<h3 class="subheader">Designer</h3>
 							<p>Voluptatem accusantium doloremque laudantium, totam rem aperiam.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
 						</li>
 						<li class="team-member-item large-4 columns">
-							<img src="" alt="team-member">
+							<div class="social-info">
+								<img src="" alt="team-member">
+								<ul class="team-member-social-link clearfix">
+									<li class="float-left"><a class="fa fa-twitter" href="/"></a></li>
+									<li class="float-left"><a class="fa fa-facebook" href="/"></a></li>
+									<li class="float-left"><a class="fa fa-instagram" href="/"></a></li>
+								</ul>
+							</div>
 							<h3 class="text-uppercase">Justin West</h3>
 							<h3 class="subheader">Manager</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
@@ -237,24 +251,24 @@
 			<div class="team-achievements">
 				<ul class="row achievements-list">
 					<li class="large-3 columns">
-						<div class="icon"></div>
-						<div class="stat">2009</div>
-						<h3 class="text-uppercase achievement-description">Perspiciatis</h3>
+						<div class="icon text-center"><i class="fa fa-gift" aria-hidden="true"></i></div>
+						<div class="stat text-center">2009</div>
+						<h3 class="text-uppercase text-center achievement-description">Perspiciatis</h3>
 					</li>
 					<li class="large-3 columns">
-						<div class="icon"></div>
-						<div class="stat">13,562</div>
-						<h3 class="text-uppercase achievement-description">Comments</h3>
+						<div class="icon text-center"><i class="fa fa-comments-o" aria-hidden="true"></i></div>
+						<div class="stat text-center">13,562</div>
+						<h3 class="text-uppercase text-center achievement-description">Comments</h3>
 					</li>
 					<li class="large-3 columns">
-						<div class="icon"></div>
-						<div class="stat">8,710</div>
-						<h3 class="text-uppercase achievement-description">Coffee cups</h3>
+						<div class="icon text-center"><i class="fa fa-coffee" aria-hidden="true"></i></div>
+						<div class="stat text-center">8,710</div>
+						<h3 class="text-uppercase text-center achievement-description">Coffee cups</h3>
 					</li>
 					<li class="large-3 columns">
-						<div class="icon"></div>
-						<div class="stat">715</div>
-						<h3 class="text-uppercase achievement-description">Awards</h3>
+						<div class="icon text-center"><i class="fa fa-trophy" aria-hidden="true"></i></div>
+						<div class="stat text-center">715</div>
+						<h3 class="text-uppercase text-center achievement-description">Awards</h3>
 					</li>
 				</ul>
 
