add wrapper for images in blck work-example

--- a/src/index.html
+++ b/src/index.html
@@ -105,18 +105,12 @@
 				</div>
 			</div>
 			<ul class="row work-list">
-				<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>
-				<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>
-				<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>
-				<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>
-				<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>
-				<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>
-				<!--<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>-->
-				<!--<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>-->
-				<!--<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>-->
-				<!--<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>-->
-				<!--<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>-->
-				<!--<li class="work-list-item work-example large-4 columns"><img src="images/work-examples/" alt="work"></li>-->
+				<li class="work-list-item work-example large-4 columns"><div class="work"><img src="images/works/work1.jpg" alt="work"></div></li>
+				<li class="work-list-item work-example large-4 columns"><div class="work"><img src="images/works/work2.jpg" alt="work"></div></li>
+				<li class="work-list-item work-example large-4 columns"><div class="work"><img src="images/works/work3.jpg" alt="work"></div></li>
+				<li class="work-list-item work-example large-4 columns"><div class="work"><img src="images/works/work4.jpg" alt="work"></div></li>
+				<li class="work-list-item work-example large-4 columns"><div class="work"><img src="images/works/work5.jpg" alt="work"></div></li>
+				<li class="work-list-item work-example large-4 columns"><div class="work"><img src="images/works/work6.jpg" alt="work"></div></li>
 			</ul>
 			<div class="row">
 				<div class="columns">
@@ -178,63 +172,50 @@
 				<div class="row">
 					<ul class="team-member-list">
 						<li class="team-member-item large-4 columns">
-							<div class="social-info">
-								<img src="" alt="team-member">
+							<div class="member-social-info">
+								<img class="round" src="images/team/img-3.jpg" alt="team-member">
 								<ul class="team-member-social-link clearfix">
 									<li class="float-left"><a class="fa fa-twitter" href="/"></a></li>
 									<li class="float-left"><a class="fa fa-facebook" href="/"></a></li>
 									<li class="float-left"><a class="fa fa-instagram" href="/"></a></li>
 								</ul>
 							</div>
-
-							<h3 class="text-uppercase">Michael Joe</h3>
-							<h3 class="subheader">CEO & Founder</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+							<div class="about-member">
+								<h3 class="text-uppercase about-member-title">Michael Joe</h3>
+								<h3 class="subheader">CEO & Founder</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+							</div>
 						</li>
 						<li class="team-member-item large-4 columns">
-							<div class="social-info">
-								<img src="" alt="team-member">
+							<div class="member-social-info">
+								<img class="round" src="images/team/img-1.jpg" alt="team-member">
 								<ul class="team-member-social-link clearfix">
 									<li class="float-left"><a class="fa fa-twitter" href="/"></a></li>
 									<li class="float-left"><a class="fa fa-facebook" href="/"></a></li>
 									<li class="float-left"><a class="fa fa-instagram" href="/"></a></li>
 								</ul>
 							</div>
-							<h3 class="text-uppercase">Jeremy Scott</h3>
-							<h3 class="subheader">Designer</h3>
-							<p>Voluptatem accusantium doloremque laudantium, totam rem aperiam.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+							<div class="about-member">
+								<h3 class="text-uppercase about-member-title">Jemmy Scott</h3>
+								<h3 class="subheader">Designer</h3>
+								<p>Voluptatem accusantium doloremque laudantium, totam rem aperiam.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+							</div>
 						</li>
 						<li class="team-member-item large-4 columns">
-							<div class="social-info">
-								<img src="" alt="team-member">
+							<div class="member-social-info">
+								<img class="round" src="images/team/img-2.jpg" alt="team-member">
 								<ul class="team-member-social-link clearfix">
 									<li class="float-left"><a class="fa fa-twitter" href="/"></a></li>
 									<li class="float-left"><a class="fa fa-facebook" href="/"></a></li>
 									<li class="float-left"><a class="fa fa-instagram" href="/"></a></li>
 								</ul>
 							</div>
-							<h3 class="text-uppercase">Justin West</h3>
-							<h3 class="subheader">Manager</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+							<div class="about-member">
+								<h3 class="text-uppercase about-member-title">Jasmin West</h3>
+								<h3 class="subheader">Manager</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+							</div>
 						</li>
-						<!--<li class="team-member-item large-4 columns">-->
-							<!--<img src="" alt="team-member">-->
-							<!--<h3 class="text-uppercase">Michael Joe</h3>-->
-							<!--<h3 class="subheader">CEO & Founder</h3>-->
-							<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>-->
-						<!--</li>-->
-						<!--<li class="team-member-item large-4 columns">-->
-							<!--<img src="" alt="team-member">-->
-							<!--<h3 class="text-uppercase">Jeremy Scott</h3>-->
-							<!--<h3 class="subheader">Designer</h3>-->
-							<!--<p>Voluptatem accusantium doloremque laudantium, totam rem aperiam.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>-->
-						<!--</li>-->
-						<!--<li class="team-member-item large-4 columns">-->
-							<!--<img src="" alt="team-member">-->
-							<!--<h3 class="text-uppercase">Justin West</h3>-->
-							<!--<h3 class="subheader">Manager</h3>-->
-							<!--<p>Voluptatem accusantium doloremque laudantium, totam rem aperiam.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>-->
-						<!--</li>-->
 					</ul>
 				</div>
 				<div class="row">
@@ -342,8 +323,7 @@
 					</ul>
 					
 				</div>
-			</div>
-			<!--div.about-our-skills-->
+			</div><!--end about-our-skills-->
 		</div>
 		<div class="subscribe">
 			<div class="row">
